--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/potato-kugel.html">Potato Kugel</a>
+    <ul>
+        <li><a href="./recipes/potato-kugel.html">Potato Kugel</a></li>
+        <li><a href="./recipes/scalloped-pineapple-souffle.html">Scalloped Pineapple Souffle</a></li>
+    </ul>
 </body>
 </html>
