--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/potato-kugel.html">Potato Kugel</a></li>
         <li><a href="./recipes/scalloped-pineapple-souffle.html">Scalloped Pineapple Souffle</a></li>
+        <li><a href="./recipes/rich-and-creamy-potatoes-au-gratin.html">Rich and Creamy Potatos au Gratin</a></li>
     </ul>
 </body>
 </html>
